fixed font, it was rlly dumb, hopefully works on mobile :)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,5 +135,6 @@ body.splat-toggle .splat {
     @font-face {
       font-family: 'Rodondo';
       src: url(~/fonts/Rodondo.otf) format('opentype');
+      ascent-override: 70%;
     }
   }
